<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="xebia.ismail.e_learning.Login.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/fondo"
        android:padding="@dimen/activity_horizontal_margin">


        <!--<ImageView-->
            <!--android:layout_width="120dp"-->
            <!--android:layout_height="120dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="1dp"-->
            <!--android:src="@drawable/escudo"/>-->


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/nombre"
                android:drawablePadding="10dp"
                android:theme="@style/TextEstilo"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/telefono"
                android:drawablePadding="10dp"
                android:theme="@style/TextEstilo"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColorHint="@android:color/white">


            <TextView
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Distrito"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@android:color/white"/>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/country_arrays"
                android:maxLines="1"
                android:prompt="@string/country_prompt"
                android:singleLine="true"
                android:textColor="@android:color/white" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dni"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/dni"
                android:drawablePadding="10dp"
                android:theme="@style/TextEstilo"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:theme="@style/TextEstilo"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                tools:ignore="InvalidImeActionId"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp"
                android:theme="@style/TextEstilo"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short"
            android:textSize="15dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"/>

        <!--<Button-->
            <!--android:id="@+id/btn_reset_password"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dip"-->
            <!--android:background="@null"-->
            <!--android:text="@string/btn_forgot_password"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/colorAccent" />-->

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
